nixidy/generated/prod/windmill/Deployment-windmill-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: windmill-app
    app.kubernetes.io/name: windmill-app
    chart: windmill-4.0.119
    heritage: Helm
    release: windmill
  name: windmill-app
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windmill-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: windmill-app
        app.kubernetes.io/name: windmill-app
        release: windmill
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: DATABASE_URL
                  name: windmill-db
            - name: BASE_URL
              value: https://windmill.trdos.me
            - name: RUST_LOG
              value: info
            - name: MODE
              value: server
            - name: JSON_FMT
              value: "true"
          image: ghcr.io/windmill-labs/windmill:1.672.0@sha256:b1e3af47adf684aab3aac68b69143f4d7fd6f3a644c0c39ea5e171d1f05c3a6e
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 30
          name: windmill-app
          ports:
            - containerPort: 8000
            - containerPort: 8001
          readinessProbe:
            failureThreshold: 1
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2Gi
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      serviceAccountName: windmill
      terminationGracePeriodSeconds: 40
