nixidy/generated/prod/windmill/Deployment-windmill-workers-native.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: windmill-workers
    app.kubernetes.io/name: windmill-workers
    chart: windmill-4.0.119
    heritage: Helm
    release: windmill
    workerGroup: native
  name: windmill-workers-native
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windmill-workers
      workerGroup: native
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: windmill-workers
        app.kubernetes.io/name: windmill-workers
        release: windmill
        workerGroup: native
    spec:
      containers:
        - env:
            - name: NATIVE_MODE
              value: "true"
            - name: SLEEP_QUEUE
              value: "200"
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: DATABASE_URL
                  name: windmill-db
            - name: BASE_URL
              value: https://windmill.trdos.me
            - name: RUST_LOG
              value: info
            - name: MODE
              value: worker
            - name: JSON_FMT
              value: "true"
            - name: WORKER_GROUP
              value: native
          image: ghcr.io/windmill-labs/windmill:1.672.0@sha256:b1e3af47adf684aab3aac68b69143f4d7fd6f3a644c0c39ea5e171d1f05c3a6e
          imagePullPolicy: Always
          name: windmill-worker
          ports:
            - containerPort: 8001
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            privileged: true
      serviceAccountName: windmill
      terminationGracePeriodSeconds: 604800
