nixidy/generated/prod/windmill/Service-windmill-app-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    operated-prometheus: "true"
  name: windmill-app-metrics
  namespace: development
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 8001
      protocol: TCP
  selector:
    app.kubernetes.io/name: windmill-app
  sessionAffinity: None
  type: ClusterIP
