nixidy/generated/prod/windmill/Service-windmill-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: windmill-app
  namespace: development
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/name: windmill-app
  sessionAffinity: ClientIP
  type: ClusterIP
