nixidy/generated/prod/windmill/HTTPRoute-windmill.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  namespace: development
spec:
  hostnames:
    - windmill.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: windmill-extra
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /ws/
        - path:
            type: PathPrefix
            value: /ws_debug/
